--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.xiluiis</groupId>
   <artifactId>WelcomeTitles</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0-beta</version>
   <name>WelcomeTitles</name>
   <url>http://maven.apache.org</url>
   
