--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,17 @@
     </repository>
 </repositories>
 
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
+
   <dependencies>
    <!--This adds the Spigot API artifact to the build -->
      <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
-           <version>1.21.5-R0.1-SNAPSHOT</version>
+           <version>1.21.6-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
     </dependency>
   </dependencies>
