Add custom messages and admin option for messages.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,7 @@ commands:
   welcometitles:
     description: test
     usage: test
+permissions:
+  welcometitles.admin:
+    description: Allows the player avoid global join message
+    default: false
