Add support for new ranks and config parameters; refactor code for easier future rank additions

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,12 @@
-player-private-join-message: "Hi %player%, Welcome back!"
+default-private-join-message: "Hi %player%, Welcome back!"
+admin-private-join-message: "Hi %player%, Welcome back!"
+mod-private-join-message: "Hi %player%, Welcome back!"
+vip-private-join-message: "Hi %player%, Welcome back!"
+default-global-join-message: "[+] %player%"
 admin-global-join-message: ""
-player-global-join-message: "[+] %player%"
+mod-global-join-message: "[+] %player%"
+vip-global-join-message: "[+] %player%"
+default-global-quit-message: "[-] %player%"
 admin-global-quit-message: ""
-player-global-quit-message: "[-] %player%"
+mod-global-quit-message: "[-] %player%"
+vip-global-quit-message: "[-] %player%"
